--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "4.0.0-beta.12",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
+    "sweetalert": "^2.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
