--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
     "core-js": "^2.5.3",
+    "crypto": "^1.0.1",
+    "mongodb": "^3.1.8",
     "rxjs": "6.2.2",
     "sweetalert": "^2.1.0",
+    "uniqid": "^5.0.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
