--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
     "core-js": "^2.5.3",
-    "crypto": "^1.0.1",
-    "mongodb": "^3.1.8",
     "rxjs": "6.2.2",
     "sweetalert": "^2.1.0",
-    "uniqid": "^5.0.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -44,6 +41,7 @@
     "@ionic/angular-toolkit": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mongodb": "^3.1.12",
     "@types/node": "~10.11.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
