--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
-    "cordova-admob-sdk": "0.20.1",
+    "cordova-admob-sdk": "^0.20.2",
     "cordova-android": "7.1.1",
-    "cordova-plugin-admob-free": "0.21.0",
+    "cordova-plugin-admob-free": "^0.21.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.0",
@@ -50,6 +50,7 @@
     "@angular/compiler-cli": "~6.1.1",
     "@angular/language-service": "~6.1.1",
     "@ionic/angular-toolkit": "^1.0.0",
+    "@ionic/lab": "1.0.11",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/mongodb": "^3.1.12",
@@ -74,12 +75,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-admob-free": {
         "ADMOB_APP_ID": "ca-app-pub-9624629768425340~9784878224"
+      },
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       }
     },
     "platforms": [
