--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-promise-polyfill": "0.0.2",
+    "cordova-windows": "6.0.1",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "sweetalert": "^2.1.0",
@@ -84,7 +85,8 @@
       }
     },
     "platforms": [
-      "android"
+      "android",
+      "windows"
     ]
   }
 }
