--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/admob-free": "^5.0.0-beta.21",
+    "@ionic-native/app-update": "^4.17.0",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
     "cordova-admob-sdk": "^0.20.3",
-    "cordova-android": "7.1.2",
+    "cordova-android": "7.1.4",
     "cordova-plugin-admob-free": "^0.21.0",
+    "cordova-plugin-app-update": "1.6.0",
+    "cordova-plugin-appversion": "1.0.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.4",
@@ -82,11 +85,12 @@
       },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-app-update": {}
     },
     "platforms": [
-      "android",
-      "windows"
+      "windows",
+      "android"
     ]
   }
 }
