--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MongoClient",
-  "version": "0.0.1",
+  "version": "1.0",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "scripts": {
@@ -21,8 +21,8 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/admob-free": "^5.0.0-beta.21",
-    "@ionic-native/app-update": "^4.17.0",
-    "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/app-update": "^5.0.0-beta.21",
+    "@ionic-native/core": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
@@ -89,8 +89,8 @@
       "cordova-plugin-app-update": {}
     },
     "platforms": [
-      "windows",
-      "android"
+      "android",
+      "windows"
     ]
   }
 }
