--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MongoClient",
-  "version": "1.0",
+  "version": "1.0.1",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "scripts": {
@@ -21,21 +21,28 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@ionic-native/admob-free": "^5.0.0-beta.21",
+    "@ionic-native/code-push": "^5.0.0-beta.22",
     "@ionic-native/core": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.12",
+    "code-push": "2.0.6",
     "cordova-admob-sdk": "^0.20.3",
     "cordova-android": "7.1.4",
     "cordova-plugin-admob-free": "^0.21.0",
+    "cordova-plugin-code-push": "1.11.15",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-dialogs": "2.0.1",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file-transfer": "^1.6.3",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-zip": "^3.1.0",
     "cordova-promise-polyfill": "0.0.2",
-    "cordova-windows": "6.0.1",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "sweetalert": "^2.1.0",
@@ -82,11 +89,13 @@
       },
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-code-push": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-zip": {}
     },
     "platforms": [
-      "android",
-      "windows"
+      "android"
     ]
   }
 }
